denylocalingress.yml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
description: "restrict all local ingress to frontend"
metadata:
  name: "no-local-ingress"
spec:
  endpointSelector:
    matchLabels:
      app: frontend
  ingress:
  - fromEntities:
    - world
  - fromEndpoints:
    - except:
        matchLabels:
          app: shippingservice
        matchLabels:
          app: cartservice
        matchLabels:
          app: currencyservice
        matchLabels:
          app: adservice
        matchLabels: 
          app: emailservice
        matchLabels: 
          app: paymentservice
        matchLabels: 
          app: checkoutservice
        matchLabels: 
          app: redis-cart
        matchLabels: 
          app: productcatalogservice
        matchLabels: 
          app: recommendationservice
        matchLabels:
          app: loadgenerator
