no-local-engress.yml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
description: "restrict all local egress from all pods"
metadata:
  name: "no-local-ingress-frontend"
spec:
  endpointSelector:
    matchLabels:
      app: checkoutservice
  egress:
  - {}
  endpointSelector:
    matchLabels:
      app: currencyservice
  egress:
  - {}
