no.egress.checkout.yml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
description: "restrict all local egress from checkoutservice"
metadata:
  name: "no-egress-checkoutservice"
spec:
  endpointSelector:
    matchLabels:
      app: checkoutservice
  egress:
  - {}
